--- a/Content/src/StarWars/StarWars.csproj
+++ b/Content/src/StarWars/StarWars.csproj
@@ -7,10 +7,11 @@
   
   <PropertyGroup>
     <Version>1.0.0</Version>
-    <AssemblyName>GraphQL.StarWars</AssemblyName>
+    <AssemblyName>NetCore.Api.Template.GraphQL.StarWars</AssemblyName>
     <PackageId>GraphQL.StarWars</PackageId>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildThisFileName).xml</DocumentationFile>
     <CodeAnalysisRuleSet>..\..\All.ruleset</CodeAnalysisRuleSet>
+    <RootNamespace>NetCore.Api.Template.StarWars</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
