--- a/Content/src/Web/GraphqlApi/Properties/launchSettings.json
+++ b/Content/src/Web/GraphqlApi/Properties/launchSettings.json
@@ -3,11 +3,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:3000/",
+      "applicationUrl": "http://localhost:13000/",
       "sslPort": 0
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "ui/playground",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "Example": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -15,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:3000"
+      "applicationUrl": "http://localhost:13000"
     }
   }
 }
