--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ _NCrunch_*
 .vscode/
 
 # Sample_Projects
-Sample_Projects/
+Test_Sample_Projects/
 
 
-# Sample_Projects
+# local nuget package
 *.nupkg
